fixed vertical alignment, container padding

--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
   color: hsl(218, 22%, 67%);
 }
 main {
-  padding: 100px 20px;
+  display: flex;
+  height: 100vh;
 }
 .container {
   margin: auto;
@@ -21,7 +22,7 @@ main {
 }
 
 .container > * {
-  padding: 1.8rem 1.5rem;
+  padding: 2.4rem;
 }
 
 .hero {
